--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
  <div id="cta-main" class="container">
    
     <h1 class="constant">I'M<span class="typer"></span></h1>
-    <h2 class="pop" hidden="true">WEB DEVELOPER / WEB DESIGNER</h2>
+    <h2 class="pop" hidden="true">WEB DEVELOPER / WEB DESIGNER / ANDROID DEVELOPER</h2>
 
     <a href="#" class="btn btn-primary btn-lg">GET IN TOUCH</a>
 
