--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 			<ul id="nav-list" class="nav navbar-nav navbar-right my-nav">
 			  <i id="ham" class="fa fa-bars" aria-hidden="true"></i>
               <li><a href="#" id="home" >HOME</a></li>
-              <li><a href="#" id="about">ABOUT</a></li>
-              <li><a href="#" id="skills">SKILLS</a></li>
-              <li><a href="#" id="Contact">CONTACT</a></li>
+              <li><a href="#about-me" id="about">ABOUT</a></li>
+              <li><a href="#skills-page" id="skills">SKILLS</a></li>
+              <li><a href="#contact-page-left" id="Contact">CONTACT</a></li>
 			</ul>	
 		</div>
 	 </div>	
@@ -192,6 +192,11 @@
   <span class="know-about-me">Say Hello!!</span>
   <h2 class="contact-h2">Contact Me</h2>
   <p class="contact-text">Tell me any project you want me to do for you and i'll get in touch within 24hrs.I'm open to any suggestions so get in touch.</p>
+  <div id="mail">
+  	<div id="image-mail" class="img-circle"></div>
+  </div>
+  <p class="mail-text">hegdesathvik@gmail.com</p>
+  <div id="call" class="img-circle"></div>
  </div> 
  </div>
  <div id="contact-form"></div>
